2014-09-17 Aaron Russo <arusso@berkeley.edu> - 2.0.0
* convert string representations of booleans into valid booleans (#13,14) (fgouteroux)
* sort options in the tun file to prevent constant puppet change notifications (choffee)

2014-05-08 Aaron Russo <arusso@berkeley.edu> - 1.2.0
* match stunnel defaults w/debug=5 (#8)
* add parameter to specify location of output (logging) (#8)
* add global_opts and service_opts parameters to stunnel::tun to allow
  specifying additional global and service parameters (#8)
* bugfix: properly implement timeoutidle (#9)

2014-03-31 Aaron Russo <arusso@berkeley.edu> - 1.1.1
* issue #6 : improved README documentation (ross-williams)

2014-03-20 Aaron Russo <arusso@berkeley.edu> - 1.1.0
* issue #5 : add parameter to setup client tunnels

2014-03-17 Aaron Russo <arusso@berkeley.edu> - 1.0.1
* Ensure lsb is installed
* bugfix: we weren't installing the right package on Debian systems

2013-08-26 Aaron Russo <arusso@berkeley.edu> - 1.0.0
* Debian/Ubuntu support (yvigara)

2013-08-16 Aaron Russo <arusso@berkeley.edu> - 0.0.2
* Added initscript for each tunnel
* moved away from multi-services per tunnel
* moar examples!

2013-08-12 Aaron Russo <arusso@berkeley.edu> - 0.0.1
* Initial Release