@@ -1,3 +1,12 @@
+2015-02-19 Aaron Russo <arusso@berkeley.edu> - 2.1.0
+* only install lsb-base on debian based systems (kronos-pbrideau)
+* allow management of tunnel service (kronos-pbrideau)
+* add failover support (shoekstra)
+* only fill in "options" config key if present (mighq)
+* preserve order of options hash to prevent unnecessary changes (mighq)
+* add support for global_opts (choffee)
+* add native support for CAFile option per-tunnel
+
 2014-09-17 Aaron Russo <arusso@berkeley.edu> - 2.0.0
 * convert string representations of booleans into valid booleans (#13,14) (fgouteroux)
 * sort options in the tun file to prevent constant puppet change notifications (choffee)
